tests/baselines/reference/functionOverloads43.errors.txt
tests/cases/compiler/functionOverloads43.ts(1,10): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/compiler/functionOverloads43.ts (1 errors) ====
    function foo(bar: { a:number }[]): number;
             ~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function foo(bar: { a:string }[]): string;
    function foo([x]: { a:number | string }[]): string | number {
        if (x) {
            return x.a;
        }
        
        return undefined;
    }
    
    var x = foo([{a: "str"}]);
    var y = foo([{a: 100}]);